--- a/day44/auth0-emailjs/package.json
+++ b/day44/auth0-emailjs/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
+    "@emailjs/browser": "^3.11.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
