--- a/day44/auth0-emailjs/package.json
+++ b/day44/auth0-emailjs/package.json
@@ -14,7 +14,9 @@
     "@emailjs/browser": "^3.11.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
