--- a/day47/Trello/package.json
+++ b/day47/Trello/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "sass": "^1.69.5"
   },
