--- a/day47/Trello/package.json
+++ b/day47/Trello/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "uuid": "^9.0.1"
   },
